# bcr_bot

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  package.xml
config/cartographer/: new_bcr_robot.lua
config/maps/cartographer/corridor_map/: corridor_map.pgm  corridor_map.yaml
hooks/: bcr_bot.sh.in  new_bcr_robot.sh.in
launch/: cartographer.launch  gazebo.launch  gazebo.launch.py  gz.launch.py  mapping.launch  rviz.launch  rviz.launch.py
meshes/: bcr_bot_mesh.dae  bcr_chassis.dae.orig
meshes/kinect/: d415.dae
models/aws_robomaker_warehouse_GroundB_01/: model.sdf
models/aws_robomaker_warehouse_RoofB_01/: model.sdf
models/corridor/: model.config  model.sdf
models/mars/: model.config  model.sdf
models/mars/materials/scripts/: mars.material
rviz/: entire_setup.rviz
urdf/: bcr_bot.xacro  gazebo.xacro  gazebo_BACKUP_247361.xacro  gazebo_REMOTE_247361.xacro  gz.xacro  macros.xacro  materials.xacro  model.urdf  new_bcr_robot.xacro
worlds/: corridor.world  empty.sdf  empty.world  small_warehouse.sdf  small_warehouse.world
worlds/gazebo/: corridor.world  mars.world  small_warehouse.world
worlds/gz/: empty.sdf  small_warehouse.sdf
