<?xml version="1.0"?>
<package format="2">
	<name>new_bcr_robot</name>
	<version>0.0.0</version>
	<description>The new_bcr_robot package</description>

	<maintainer email="leander@blackcoffeerobotics.com">leander</maintainer>
	<maintainer email="praneeth@blackcoffeerobotics.com">Kvk Praneeth</maintainer>

	<license>(C) Black Coffee Robotics</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>gazebo_ros_pkgs</exec_depend>

</package>
