<?xml version="1.0"?>
<package format="2">
	<name>bcr_bot</name>
	<version>0.0.1</version>
	<description>The bcr_bot package</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
    <maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>

	<license>(C) Black Coffee Robotics</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>gazebo_ros_pkgs</exec_depend>

</package>
